# arctos

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  TESTING.md  alembic.ini  app.py  generate_permission_key.py  init_db.py  justfile  main.py  migrate_camera_columns.py  migrate_gamestate_columns.py  migrate_match_columns.py  migrate_oauth_columns.py  migrate_stones_at_start.py  migrate_time_finalized.py  models.py  pyproject.toml  pytest.ini  requirements.txt  reset_password.py  run_app.py  update.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  project.md
.github/workflows/: deploy.yml  deploy_dev.yml  test.yml
app/: README.md  __init__.py  error_handlers.py  error_values.py  exceptions.py  filters.py
app/domain/: MatchGraph.py  README.md  enums.py
app/models/: README.md  __init__.py  base.py  camera.py  constants.py  league.py  match.py  normalised.py  penalty_type.py  records.py  registrable_config.py  registration.py  sidecomp.py  tournament.py  user.py  validators.py
app/routes/: README.md  __init__.py  _api.py  auth.py  content.py  footage.py  leagues.py  main.py  matches.py  notes.py  penalty_types.py  players.py  registration.py  sidecomps.py  teams.py  tournaments.py  waivers.py  websocket.py
app/serializers/: README.md  __init__.py  league_serializer.py  match_note_serializer.py  match_schedule_serializer.py  registration_serializer.py  tournament_serializer.py  user_serializer.py
app/services/: README.md  __init__.py  _common.py  dual_write.py  match_actions_service.py  match_service.py  match_start_eligibility.py  permission_service.py  registration_resolver.py  registration_service.py  schedule_import_export_service.py  sidecomp_service.py  team_stats_service.py  tournament_service.py
app/utils/: MatchGraph.py  README.md  __init__.py  camera_helpers.py  datetime_helpers.py  decorators.py  dependencies.py  dsl_dependency_analyzer.py  footage.py  grammar.lark  helpers.py  logging.py  match_ref_resolution.py  name_validation.py  parser.py  player_helpers.py  preview_store.py  profile_photo_helpers.py  recording_retry.py  responses.py  result_helpers.py  s3_video.py  scheduling.py  toml_helpers.py  user_helpers.py  user_uploads.py  youtube_upload.py
arctos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
build_system/: Dockerfile  README.md
docs/: DEPLOY.md  Makefile  README.md  api-reference.rst  arctos-schedule-script.md  conf.py  data-accessibility-guide.md  docs.md  env-vars.md  index.rst  legal.rst  license.md  operations.rst  privacy-policy.md  scheduling.md  side-comps.md  terms.md  thanks.md  user-guide.rst
docs/api/: app.error_handlers.rst  app.exceptions.rst  app.filters.rst  app.models.rst  app.rst  app.serializers.league_serializer.rst  app.serializers.match_note_serializer.rst  app.serializers.match_schedule_serializer.rst  app.serializers.registration_serializer.rst  app.serializers.rst  app.serializers.tournament_serializer.rst  (+39 more)
frontend/: Cargo.toml  Dioxus.toml  README.md  index.html
frontend/src/: api.rs  components.rs  display.rs  main.rs  record_idb.rs  record_mp4.rs  stones_filter.rs  time_format.rs  time_sync.rs  types.rs  url_slug.rs
frontend/src/components/: ass_entry.rs  change_password_card.rs  edit_registration_modal.rs  event_about.rs  event_header.rs  event_teams_list.rs  league_penalty_types_table.rs  league_registration_buttons.rs  penalty_display.rs  sidecomp_categories_editor.rs  team_registration_help_modal.rs  team_token_input.rs
frontend/src/pages/: about.rs  add_injury.rs  arctos_schedule_script.rs  bracket.rs  bracket_setup.rs  create_event.rs  data_accessibility_guide.rs  docs.rs  edit_field.rs  edit_injury.rs  edit_match.rs  edit_player_profile.rs  edit_player_registration.rs  edit_tag.rs  edit_team_profile.rs  edit_team_registration.rs  finalize_match.rs  google_choose_account_type.rs  google_complete_profile.rs  index.rs  invitations.rs  layout.rs  league_home.rs  league_invitations.rs  league_manage.rs  league_new_tournament.rs  league_register.rs  league_results.rs  league_settings.rs  leagues_index.rs  license.rs  login.rs  manage.rs  manage_footage.rs  manage_user_uploads.rs  markdown_page.rs  match_page.rs  mod.rs  new_league.rs  new_tournament.rs  (+28 more)
migrations/: README.md  env.py  script.py.mako
scripts/: README.md  backfill_normalised_tables.py  backup_db.sh  check_duplicates.py  cleanup_data_quality.py
setup/: Brewfile  README.md  apt-packages.txt  setup-macos.sh  setup-python.sh  setup-ubuntu.sh
static/: README.md
templates/: about.html  add_injury.html  base.html  bracket_setup.html  camera.html  docs.html  edit_field.html  edit_injury.html  edit_match.html  edit_player_profile.html  edit_player_registration.html  edit_tag.html  edit_team_profile.html  edit_team_registration.html  finalize_match.html  google_choose_account_type.html  google_complete_profile.html  index.html  login.html  markdown.html  match_page.html  match_page_websocket.html  new_tournament.html  player_profile.html  players.html  record.html  register.html  run_match.html  run_match_websocket.html  scoreboard.html  start_match.html  stones_player.html  team_profile.html  teams.html  tournament_bracket.html  tournament_home.html  tournament_invitations.html  tournament_manage.html  tournament_register.html  tournament_results.html  (+3 more)
tests/: README.md  conftest.py  test_basic.py  test_camera_helpers.py  test_create_tournament_errors.py  test_dependencies.py  test_dsl_dependency_analyzer.py  test_dsl_parser.py  test_dynamic_scheduling.py  test_enums.py  test_error_handlers.py  test_error_values.py  test_match_start.py  test_matches_api.py  test_model_helpers.py  test_organizer_checkin.py  test_permissions.py  test_registration_cap.py  test_registration_flow.py  test_registration_reregister.py  test_serializers.py  test_sidecomp_entry_number_race.py  test_sidecomps.py  test_team_shortname_routes.py  test_to_register_on_behalf.py  test_tournament_service.py  test_update_tags_recompute.py  test_url_surface.py  utils.py
(+64 files in other folders)
