[project]
name = "arctos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib==1.6.5",
    "bcrypt==5.0.0",
    "bleach==6.3.0",
    "cowponder>=0.1.8",
    "flask==3.1.2",
    "flask-executor>=1.0.0",
    "flask-login==0.6.3",
    "flask-socketio==5.5.1",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "gunicorn>=23.0.0",
    "markdown==3.10",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-flask==1.3.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "tomli==2.3.0",
    "werkzeug==3.1.4",
    "wtforms==3.2.1",
]
