[package]
name = "arctos-frontend"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
wasm-split = ["dioxus/wasm-split", "dep:dioxus-router", "dioxus-router/wasm-split"]

[dependencies]
dioxus = { version = "0.7", features = ["web", "router", "document"] }
dioxus-router = { version = "0.7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
pulldown-cmark = "0.9"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Location", "UrlSearchParams", "Element", "Performance",
    "HtmlElement", "KeyboardEvent", "Navigator", "Clipboard",
    "AudioContext", "AudioContextState", "AudioBuffer", "AudioBufferSourceNode", "AudioDestinationNode",
    "BaseAudioContext", "AudioContextOptions", "MediaStreamAudioDestinationNode",
    "OscillatorNode", "GainNode", "OscillatorType", "AudioParam",
    "HtmlAudioElement", "HtmlInputElement", "HtmlTextAreaElement", "HtmlCanvasElement", "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DomException", "Blob", "Response", "Request", "RequestInit", "RequestMode",
    "Headers", "ResponseType", "MouseEvent", "DomRect", "TouchEvent", "Touch", "TouchList", "CustomEvent",
    "Url", "HtmlAnchorElement",
    "FormData", "HtmlVideoElement", "HtmlMediaElement", "ImageBitmap", "MediaDevices", "MediaStream",
    "MediaRecorder", "MediaRecorderOptions", "MediaStreamConstraints", "BlobEvent",
    "MediaDeviceInfo", "MediaStreamTrack",
    "Storage",
    "StorageManager",
] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
idb = "0.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = "debuginfo"
codegen-units = 1
panic = "abort"
incremental = false
